--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,25 +22,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v1
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: 17
         
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew      
       
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build -x test
+      run: ./gradlew clean build
+      shell: bash
         
-    - name: Packaging with Gradle        
-      uses: actions/upload-artifact@v3
-      with:
-        name: Package
-        path: build/libs        
+    #- name: Packaging with Gradle        
+    #  uses: actions/upload-artifact@v3
+    #  with:
+    #    name: Package
+    #    path: build/libs        
         
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
