--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,12 +41,12 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build -x test
       shell: bash
-        
-    #- name: Packaging with Gradle        
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: Package
-    #    path: build/libs        
+    
+    - name: Packaging with Gradle        
+      uses: actions/upload-artifact@v3
+      with:
+        name: Package
+        path: build/libs        
         
     - name: Image-Checkout
       uses: actions/checkout@v2
