--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,9 +27,20 @@ jobs:
     environment: production
 
     steps:
-    - name: Git-Checkout
-      uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v1
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+        
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1     
+      
     - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
@@ -41,30 +52,14 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build -x test
       shell: bash
-    
-#     - name: Packaging with Gradle        
-#       uses: actions/upload-artifact@v3
-#       with:
-#         name: Package
-#         path: build/libs        
-    - name: Generate deployment package
-      run: |
-          pwd
-          ls -al build/libs/
-          cp -r build/libs/ke-poc-0.0.1-SNAPSHOT.jar ./app.jar
-    - name: Image-Checkout
-      uses: actions/checkout@v2
-      
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+#     - name: Generate deployment package
+#       run: |
+#           pwd
+#           ls -al build/libs/
+#           cp -r build/libs/ke-poc-0.0.1-SNAPSHOT.jar ./app.jar
+#     - name: Image-Checkout
+#       uses: actions/checkout@v2
       
     - name: Push image to Amazon ECR
       id: deploy-image
