--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,23 +2,31 @@ name: Dockerizing to Amazon ECR
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-    
+    branches:
+      - main
+      
 jobs:
-  deploy:
+  publish:
     runs-on: ubuntu-latest
-
+    
     env:
       AWS_REGION: ap-northeast-2
       ECR_REPOSITORY_NAME: hoony
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Configure AWS credentials For Devzone
+        uses: actions/checkout@v3
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+          cache: gradle
+      
+      - name: Run chmod to make gradlew executable
+        run: chmod +x ./gradlew         
+      - name: build gradle
+        run: ./gradlew clean assemble
+        
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           # Github Repository Secrets에 값 등록 필요!
@@ -30,54 +38,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: 17
-          cache: 'gradle' # https://github.com/actions/setup-java#caching-packages-dependencies
-
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew 
-        
-      - name: build gradle
-        run: ./gradlew clean build -x test
-
-#       - name: Download dd-java-agent
-#         run: wget -O assignment-api/dd-java-agent.jar https://dtdg.co/latest-java-tracer
-        # wget 명령의 -O 옵션을 통해 파일의 
-        # 경로 및 이름을 지정하여 datadog agent 다운로드
-
       - name: Build, tag, and push image to Amazon ECR
-        id: deploy-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
-          IMAGE_TAG: latest
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ env.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-#       - name: Download Task Definition Template
-#         run: |
-#           aws ecs describe-task-definition \
-#             --task-definition $ \
-#             --query taskDefinition \
-#             > task-definition.json
-
-#       - name: Fill in the new image ID in the Amazon ECS task definition
-#         id: task-def
-#         uses: aws-actions/amazon-ecs-render-task-definition@v1
-#         with:
-#           task-definition: task-definition.json
-#           container-name: $
-#           image: $
-
-#       - name: Deploy Amazon ECS task definition
-#         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-#         with:
-#           task-definition: $
-#           service: $
-#           cluster: $
-#           wait-for-service-stability: true
+          CONTAINER_IMAGE_TEMP_PATH=$(mktemp -d)
+          cp build/libs/*.jar ${CONTAINER_IMAGE_TEMP_PATH}
+          docker build -f ./Dockerfile -t ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG} ${CONTAINER_IMAGE_TEMP_PATH}
+          docker push ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
