--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 #           cache: gradle
   
       - name: Set up JDK 17
-        uses: actions/checkout@v3
+        uses: actions/setup-java@v1
         with:
           java-version: 17
           cache: gradle       
