--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,16 @@ jobs:
 #           distribution: 'corretto'
 #           java-version: '17'
 #           cache: gradle
-  
+      - name: Checkout
+        uses: actions/checkout@v3  
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
           cache: gradle       
           
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew         
+#       - name: Run chmod to make gradlew executable
+#         run: chmod +x ./gradlew         
       - name: build gradle
         run: ./gradlew clean assemble
         
